--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -2,7 +2,6 @@
     <body>
     <div class="welcome__book">
         <slot name="welcome-header"></slot>
-        <slot name="welcome-logo"></slot>
         <slot name="fer-scroll"></slot>
         <slot name="welcome-menu"></slot>
         <slot name="welcome-animation"></slot>
@@ -94,86 +93,90 @@
             slot="fer-scroll"
             class="index-cat"
     >
-        <div class="arrow" data-id="top">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <div class="arrow" data-id="bottom">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <div class="arrow" data-id="left">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <div class="arrow" data-id="right">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </fer-scroll>
-
-    <welcome-logo
-            slot="welcome-logo"
-    >
-        <div class="welcome-logo">
-            <div class="square-buttom">
-                <p class="square-title">больше</p>
+        <div class="relative-container">
+            <div class="arrow" data-id="logo">
+                <slot name="welcome-logo"></slot>
+            </div>
+            <div class="arrow" data-id="top">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="arrow" data-id="bottom">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="arrow" data-id="left">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="arrow" data-id="right">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
-        <ol class="ltr">
-            <li data-id="1_0">Структура компании</li>
-            <li data-id="1_1">Мы занимаемся</li>
-            <li data-id="1_2">Наши ценности</li>
-            <!--                            <li data-id="1_3">График работы</li>-->
-            <!--                            <li data-id="1_4">Дресс-код</li>-->
-            <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
-            <!--                            <li data-id="1_6">Зарплата</li>-->
-            <!--                            <li data-id="1_7">Отпуск</li>-->
-            <!--                            <li data-id="1_8">Обед</li>-->
-            <!--                            <li data-id="1_9">Прочие радости</li>-->
-        </ol>
-        <ol class="rtl">
-            <li data-id="1_0">Структура компании</li>
-            <li data-id="1_1">Мы занимаемся</li>
-            <li data-id="1_2">Наши ценности</li>
-            <!--                            <li data-id="1_3">График работы</li>-->
-            <!--                            <li data-id="1_4">Дресс-код</li>-->
-            <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
-            <!--                            <li data-id="1_6">Зарплата</li>-->
-            <!--                            <li data-id="1_7">Отпуск</li>-->
-            <!--                            <li data-id="1_8">Обед</li>-->
-            <!--                            <li data-id="1_9">Прочие радости</li>-->
-        </ol>
-        <ol reversed class="ltr btt">
-            <li data-id="1_0">Структура компании</li>
-            <li data-id="1_1">Мы занимаемся</li>
-            <li data-id="1_2">Наши ценности</li>
-            <!--                            <li data-id="1_3">График работы</li>-->
-            <!--                            <li data-id="1_4">Дресс-код</li>-->
-            <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
-            <!--                            <li data-id="1_6">Зарплата</li>-->
-            <!--                            <li data-id="1_7">Отпуск</li>-->
-            <!--                            <li data-id="1_8">Обед</li>-->
-            <!--                            <li data-id="1_9">Прочие радости</li>-->
-        </ol>
-        <ol reversed class="rtl btt">[i]
-            <li data-id="1_0">Структура компании</li>
-            <li data-id="1_1">Мы занимаемся</li>
-            <li data-id="1_2">Наши ценности</li>
-            <!--                            <li data-id="1_3">График работы</li>-->
-            <!--                            <li data-id="1_4">Дресс-код</li>-->
-            <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
-            <!--                            <li data-id="1_6">Зарплата</li>-->
-            <!--                            <li data-id="1_7">Отпуск</li>-->
-            <!--                            <li data-id="1_8">Обед</li>-->
-            <!--                            <li data-id="1_9">Прочие радости</li>-->
-        </ol>
-    </welcome-logo>
 
+        <welcome-logo
+                slot="welcome-logo"
+        >
+            <div class="welcome-logo">
+                <div class="square-buttom">
+                    <p class="square-title">больше</p>
+                </div>
+            </div>
+            <ol class="ltr">
+                <li data-id="1_0">Структура компании</li>
+                <li data-id="1_1">Мы занимаемся</li>
+                <li data-id="1_2">Наши ценности</li>
+                <!--                            <li data-id="1_3">График работы</li>-->
+                <!--                            <li data-id="1_4">Дресс-код</li>-->
+                <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
+                <!--                            <li data-id="1_6">Зарплата</li>-->
+                <!--                            <li data-id="1_7">Отпуск</li>-->
+                <!--                            <li data-id="1_8">Обед</li>-->
+                <!--                            <li data-id="1_9">Прочие радости</li>-->
+            </ol>
+            <ol class="rtl">
+                <li data-id="1_0">Структура компании</li>
+                <li data-id="1_1">Мы занимаемся</li>
+                <li data-id="1_2">Наши ценности</li>
+                <!--                            <li data-id="1_3">График работы</li>-->
+                <!--                            <li data-id="1_4">Дресс-код</li>-->
+                <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
+                <!--                            <li data-id="1_6">Зарплата</li>-->
+                <!--                            <li data-id="1_7">Отпуск</li>-->
+                <!--                            <li data-id="1_8">Обед</li>-->
+                <!--                            <li data-id="1_9">Прочие радости</li>-->
+            </ol>
+            <ol reversed class="ltr btt">
+                <li data-id="1_0">Структура компании</li>
+                <li data-id="1_1">Мы занимаемся</li>
+                <li data-id="1_2">Наши ценности</li>
+                <!--                            <li data-id="1_3">График работы</li>-->
+                <!--                            <li data-id="1_4">Дресс-код</li>-->
+                <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
+                <!--                            <li data-id="1_6">Зарплата</li>-->
+                <!--                            <li data-id="1_7">Отпуск</li>-->
+                <!--                            <li data-id="1_8">Обед</li>-->
+                <!--                            <li data-id="1_9">Прочие радости</li>-->
+            </ol>
+            <ol reversed class="rtl btt">
+                <li data-id="1_0">Структура компании</li>
+                <li data-id="1_1">Мы занимаемся</li>
+                <li data-id="1_2">Наши ценности</li>
+                <!--                            <li data-id="1_3">График работы</li>-->
+                <!--                            <li data-id="1_4">Дресс-код</li>-->
+                <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
+                <!--                            <li data-id="1_6">Зарплата</li>-->
+                <!--                            <li data-id="1_7">Отпуск</li>-->
+                <!--                            <li data-id="1_8">Обед</li>-->
+                <!--                            <li data-id="1_9">Прочие радости</li>-->
+            </ol>
+        </welcome-logo>
+    </fer-scroll>
 
     <welcome-menu slot="welcome-menu">
         <div class="container">
