--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -151,7 +151,7 @@
                 <!--                            <li data-id="1_8">Обед</li>-->
                 <!--                            <li data-id="1_9">Прочие радости</li>-->
             </ol>
-            <ol reversed class="ltr btt">
+            <ol reversed class="ltr-btt">
                 <li data-id="1_0">Структура компании</li>
                 <li data-id="1_1">Мы занимаемся</li>
                 <li data-id="1_2">Наши ценности</li>
@@ -163,7 +163,7 @@
                 <!--                            <li data-id="1_8">Обед</li>-->
                 <!--                            <li data-id="1_9">Прочие радости</li>-->
             </ol>
-            <ol reversed class="rtl btt">
+            <ol reversed class="rtl-btt">
                 <li data-id="1_0">Структура компании</li>
                 <li data-id="1_1">Мы занимаемся</li>
                 <li data-id="1_2">Наши ценности</li>
