--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -122,59 +122,34 @@
         <welcome-logo
                 slot="welcome-logo"
         >
-            <div class="welcome-logo">
-                <div class="square-buttom">
-                    <p class="square-title">больше</p>
+            <div class="flex-container">
+                <div class="welcome-logo">
+                    <div class="square-buttom">
+                        <p class="square-title">больше</p>
+                    </div>
                 </div>
+
+                <ol class="ltr">
+                    <li data-id="1_0">Структура компании</li>
+                    <li data-id="1_1">Мы занимаемся</li>
+                    <li data-id="1_2">Наши ценности</li>
+                </ol>
+                <ol class="rtl">
+                    <li data-id="1_0">Структура компании</li>
+                    <li data-id="1_1">Мы занимаемся</li>
+                    <li data-id="1_2">Наши ценности</li>
+                </ol>
+                <ol reversed class="ltr-btt">
+                    <li data-id="1_0">Структура компании</li>
+                    <li data-id="1_1">Мы занимаемся</li>
+                    <li data-id="1_2">Наши ценности</li>
+                </ol>
+                <ol reversed class="rtl-btt">
+                    <li data-id="1_0">Структура компании</li>
+                    <li data-id="1_1">Мы занимаемся</li>
+                    <li data-id="1_2">Наши ценности</li>
+                </ol>
             </div>
-            <ol class="ltr">
-                <li data-id="1_0">Структура компании</li>
-                <li data-id="1_1">Мы занимаемся</li>
-                <li data-id="1_2">Наши ценности</li>
-                <!--                            <li data-id="1_3">График работы</li>-->
-                <!--                            <li data-id="1_4">Дресс-код</li>-->
-                <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
-                <!--                            <li data-id="1_6">Зарплата</li>-->
-                <!--                            <li data-id="1_7">Отпуск</li>-->
-                <!--                            <li data-id="1_8">Обед</li>-->
-                <!--                            <li data-id="1_9">Прочие радости</li>-->
-            </ol>
-            <ol class="rtl">
-                <li data-id="1_0">Структура компании</li>
-                <li data-id="1_1">Мы занимаемся</li>
-                <li data-id="1_2">Наши ценности</li>
-                <!--                            <li data-id="1_3">График работы</li>-->
-                <!--                            <li data-id="1_4">Дресс-код</li>-->
-                <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
-                <!--                            <li data-id="1_6">Зарплата</li>-->
-                <!--                            <li data-id="1_7">Отпуск</li>-->
-                <!--                            <li data-id="1_8">Обед</li>-->
-                <!--                            <li data-id="1_9">Прочие радости</li>-->
-            </ol>
-            <ol reversed class="ltr-btt">
-                <li data-id="1_0">Структура компании</li>
-                <li data-id="1_1">Мы занимаемся</li>
-                <li data-id="1_2">Наши ценности</li>
-                <!--                            <li data-id="1_3">График работы</li>-->
-                <!--                            <li data-id="1_4">Дресс-код</li>-->
-                <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
-                <!--                            <li data-id="1_6">Зарплата</li>-->
-                <!--                            <li data-id="1_7">Отпуск</li>-->
-                <!--                            <li data-id="1_8">Обед</li>-->
-                <!--                            <li data-id="1_9">Прочие радости</li>-->
-            </ol>
-            <ol reversed class="rtl-btt">
-                <li data-id="1_0">Структура компании</li>
-                <li data-id="1_1">Мы занимаемся</li>
-                <li data-id="1_2">Наши ценности</li>
-                <!--                            <li data-id="1_3">График работы</li>-->
-                <!--                            <li data-id="1_4">Дресс-код</li>-->
-                <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
-                <!--                            <li data-id="1_6">Зарплата</li>-->
-                <!--                            <li data-id="1_7">Отпуск</li>-->
-                <!--                            <li data-id="1_8">Обед</li>-->
-                <!--                            <li data-id="1_9">Прочие радости</li>-->
-            </ol>
         </welcome-logo>
     </fer-scroll>
 
