--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -382,20 +382,19 @@
             data-css-light="index-cat"
     >
         <div class='parallax image-backgrorootNodeund'>
-            <img class="image-scale" src='./this/img/pg6.png'/>
+            <img class="image-scale" src='./this/img/pg32.png'/>
         </div>
-        <img class="image-scale opacity" src='./this/img/pg6.png'/>
+        <img class="image-scale opacity" src='./this/img/pg32.png'/>
         <div class='teaser'>
             <div class='content'>
                 <div class="description-without-background-item-2">
                     <div class="description-page-section-2">
-                        <p class="text-offset description-about-resources">Цифро-аналоговый кот</p>
+                        <p class="text-offset description-about-resources"></p>
                         <template>
                             <ul class="text-offset description-ul-2">
                                 <li data-id="2_0">Обращение к коллегам</li>
                                 <li data-id="2_1">Лого, официальные бланки, реквизиты</li>
                                 <li data-id="2_2">Программа рекомендаций</li>
-                                <!--                            <li data-id="2_3">Корпоративные праздники</li>-->
                             </ul>
                         </template>
                     </div>
