--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -261,16 +261,16 @@
         >
             <div class="container">
                 <div class="input">
-                    <label for="schema"></label>
-                    <input id="schema" placeholder="Схема"/>
+                    <label for="schema">Схема</label>
+                    <input id="schema" placeholder="1"/>
                 </div>
                 <div class="input">
-                    <label for="region"></label>
-                    <input id="region" placeholder="Регион"/>
+                    <label for="region">Регион</label>
+                    <input id="region" placeholder="showcase.booking mo 1.1.2"/>
                 </div>
                 <div class="input">
-                    <label for="version"></label>
-                    <input id="version" placeholder="Версия"/>
+                    <label for="version">Версия</label>
+                    <input id="version" placeholder="1.1.2"/>
                 </div>
             </div>
             <fer-button
