--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -144,7 +144,10 @@
         </welcome-logo>
     </fer-scroll>
 
-    <welcome-menu slot="welcome-menu">
+    <welcome-menu
+        data-css-shadow="rules_0_0"
+            slot="welcome-menu"
+    >
         <div class="container">
             <div class="slider">
                 <div class="square"></div>
@@ -207,7 +210,6 @@
     <welcome-section
             data-id="0"
             data-css-shadow="rules_0_0"
-            children
             slot="welcome-section-0"
     >
         <div class='images'></div>
@@ -313,32 +315,43 @@
         </fer-table>
     </welcome-section>
 
-    <welcome-section data-id="1" slot="welcome-section-1">
-        <div class='parallax image-background'>
-            <img class="image-scale" src='./this/img/pg2.png'/>
-        </div>
-        <img class="image-scale opacity" src='./this/img/pg2.png'/>
-        <div class='teaser'>
-            <div class='content'>
-                <div class="description-without-background-item-1">
-                    <div class="description-page">
-                        <p class="text-offset description-about-compeny">Важное о компании</p>
-                        <ul class="text-offset description-ul-1">
-                            <li data-id="1_0">Структура компании</li>
-                            <li data-id="1_1">Мы занимаемся</li>
-                            <li data-id="1_2">Наши ценности</li>
-                            <!--                            <li data-id="1_3">График работы</li>-->
-                            <!--                            <li data-id="1_4">Дресс-код</li>-->
-                            <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
-                            <!--                            <li data-id="1_6">Зарплата</li>-->
-                            <!--                            <li data-id="1_7">Отпуск</li>-->
-                            <!--                            <li data-id="1_8">Обед</li>-->
-                            <!--                            <li data-id="1_9">Прочие радости</li>-->
-                        </ul>
-                    </div>
+    <welcome-section
+            data-id="1"
+            data-css-shadow="rules_0_0"
+            slot="welcome-section-1"
+    >
+        <div class='images'></div>
+        <div class='body'>
+            <div class="container">
+                <div>
+                    <slot name="fer-table_1_0"></slot>
                 </div>
             </div>
         </div>
+
+        <fer-table slot="fer-table_1_0">
+            <div class="auction-data">
+                <div class="auction-data__table">
+                    <div class="auction-data__table_header">
+                        <div class="auction-data__table_header_td">Data</div>
+                        <div class="auction-data__table_header_td">Summary 1</div>
+                        <div class="auction-data__table_header_td">Summary 2</div>
+                        <div class="auction-data__table_header_td">Summary 3</div>
+                        <div class="auction-data__table_header_td">Summary 4</div>
+                        <div class="auction-data__table_header_td">Summary 5</div>
+                    </div>
+                    <div class="auction-data__table_body"></div>
+                    <div class="auction-data__table_footer">
+                        <input class="auction-data__table_footer_td" name="assetId"/>
+                        <input class="auction-data__table_footer_td" name="timestamp"/>
+                        <input class="auction-data__table_footer_td" name="description"/>
+                        <input class="auction-data__table_footer_td" name="name"/>
+                        <input class="auction-data__table_footer_td" name="proofs"/>
+                        <input class="auction-data__table_footer_td" name="sender"/>
+                    </div>
+                </div>
+            </div>
+        </fer-table>
     </welcome-section>
 
     <welcome-section data-id="2" slot="welcome-section-2">
