--- a/docs/this/css/index.light.css
+++ b/docs/this/css/index.light.css
@@ -3,7 +3,7 @@ body {
     padding-left: 0.4vw;
     padding-right: 0.4vw;
     box-sizing: border-box;
-    background: rgb(1 23 10 / 11%);
+    background: #F5F7FA;
 }
 
 .dialog {
